# FabricDaxLoadTest

./: .gitignore  FabricDaxLoadTest.slnx  LICENSE  README.md  THIRD-PARTY-NOTICES.md  build_notebook.py  pyproject.toml
.github/workflows/: release.yml
Reports/: .gitignore  LoadTestsOverview.pbip  README.md
Reports/LoadTestsOverview.Report/: .platform  definition.pbir
Reports/LoadTestsOverview.Report/definition/: report.json
Reports/LoadTestsOverview.Report/definition/pages/: pages.json
Reports/LoadTestsOverview.Report/definition/pages/LoadTestOverview.Page/: page.json
Reports/LoadTestsOverview.Report/definition/pages/bb88e34196e1fc4b5dbb/: page.json
Reports/LoadTestsOverview.Report/definition/pages/c1b5fe5c2dda1c818806/: page.json
Reports/LoadTestsOverview.Report/definition/pages/eb9dc3093d5b80a9406d/: page.json
Reports/LoadTestsOverview.SemanticModel/: .platform
Reports/LoadTestsOverview.SemanticModel/definition/: expressions.tmdl  model.tmdl  relationships.tmdl
Reports/LoadTestsOverview.SemanticModel/definition/tables/: LoadTestQueries.tmdl  LoadTestRuns.tmdl  LoadTests.tmdl  Queries.tmdl  QueryExecutions.tmdl  TraceEvents.tmdl
Reports/LoadTestsOverview/LoadTestsOverview.Report/: .platform  definition.pbir
Reports/LoadTestsOverview/LoadTestsOverview.SemanticModel/: .platform
Reports/LoadTestsOverview/LoadTestsOverview.SemanticModel/definition/: expressions.tmdl  model.tmdl
docs/: data-dictionary.md  impersonation.md  load-testing-overview.md  loadgen-cli.md  loadgen-main.md  queryrunner-design.md
notebooks/: FabricDaxLoadTest.ipynb  LoadTest-Main.ipynb  LoadTest-Template.ipynb  Queries.ipynb  Run.ipynb
samples/: queries.json  users.json
scripts/: Deploy-LoadTests.ps1  build_notebooks.py  local_smoke.py
src/LoadGen/: LoadGen.csproj  Program.cs
src/QueryRunner/: LoadTestApi.cs  QueryResult.cs  QueryRunner.cs  QueryRunner.csproj  QueryRunnerLogger.cs  QueryRunnerStatus.cs
src/QueryRunner/Tracing/: FilteredTrace.xmla  TraceModels.cs  TraceSubscriber.cs
src/fdlt_runtime/: __init__.py  analyze.py  env.py  notebook.py  persist.py  queries.py  runner.py
(+24 files in other folders)
